Fixed the jump to sections not applying correctly on different screens

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,6 @@ body {
   --header-resizing-delay: 0.2s;
   --toggle-switch-delay: 0.3s;
   --side-div-width: 0;
-  transition: all var(--color-switch-delay) ease;
 }
 
 section {
@@ -372,7 +371,7 @@ nav ul li {
   font-weight: bold;
   position: relative;
   user-select: none;
-  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .menu-item.active {
@@ -400,6 +399,7 @@ nav ul li {
 
 .menu-item:hover {
   color: var(--color-primary);
+  transition: color 0.3s ease-in-out;
   cursor: pointer;
 }
 /* #endregion */
@@ -425,7 +425,7 @@ nav ul li {
   border-radius: 3px;
   border-color: var(--color-accent);
   background-color: var(--color-primary);
-  transition: border-color var(--color-switch-delay) ease;
+  transition: border-color var(--color-switch-delay) ease, background-color var(--color-switch-delay) ease;
 }
 /* #endregion */
 
@@ -437,6 +437,7 @@ nav ul li {
   background-color: var(--color-secondary);
   transition: background-color var(--color-switch-delay) ease;
   max-width: 100%;
+  height: 100vh;
 }
 
 .about-content p {
@@ -476,6 +477,8 @@ nav ul li {
 
 .cell-content svg {
   padding: 0 10px;
+  height: 70px;
+  width: 70px;
 }
 
 /* #endregion */
@@ -485,6 +488,7 @@ nav ul li {
   background-color: var(--color-primary);
   transition: background-color var(--color-switch-delay) ease;
   text-align: center;
+  height: 100vh;
 }
 
 .projects-content {
